--- a/index.html
+++ b/index.html
@@ -4,31 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <img src="img/logo.jpg" alt="Company logo">
-        <h1>Вступление H1</h1>
-        <p>Это текст моего первого домашнего задания</p>
-        <p>Не вериться, но мне уже удается писать свой первый код на HTML</p>
+        <h1>Вступление H1</h1>  
+            <p class="second-homework">Это текст<br> моего второго <br> домашнего <br> задания</p>
+        <p>Не вериться, но мне уже удается писать свой <span>первый код на HTML.</span></p>
     </header>
     <main>
-        <h2>Что дальше? H2</h2>
-        <p>Дальше, я буду получать всё больше и больше опыта в разработке сайтов, что-бы достичь новых вершин! <span><a href="https://developer.mozilla.org/ru/docs/Web/HTML">Прочитать больше в Google</a></span></p>
-        <h2>Что я буду уметь? H2</h2>
-        <p>Я смогу создавать вот такие замечательные формы:</p>
-        <form action="">
-            <input type="text" placeholder="Имя" name="name">
-            <input type="text" placeholder="E-Mail" name="email">
-            <input type="text" placeholder="Телефон" name="phone">
-            <button type="submit">Отправить форму</button>
-        </form>
-        <p>А также, я научусь создавать списки:</p>
-        <ul>
-            <li>С одним пунктом</li>
-            <li>С несколькими пунктами</li>
-            <li>И даже с тремя отдельними пунктами</li>
-        </ul>
+        <section class="whats-next">
+            <h2>Что дальше? H2</h2>
+            <p>Дальше, я буду получать всё больше и больше опыта в разработке сайтов, что-бы достичь новых вершин! <span><a href="https://developer.mozilla.org/ru/docs/Web/HTML">Прочитать больше в Google</a></span></p>
+        </section>
+        <section class="my-abilities">
+            <h2>Что я буду уметь? H2</h2>
+            <p class="forms">Я смогу создавать вот такие замечательные формы:</p>
+            <form action="">
+                <input type="text" placeholder="Имя" name="name">
+                <input type="text" placeholder="E-Mail" name="email">
+                <input type="text" placeholder="Телефон" name="phone">
+                <button type="submit">Отправить форму</button>
+            </form>
+            <p>А также, я научусь создавать списки:</p>
+            <ul>
+                <li>С одним пунктом</li>
+                <li>С несколькими пунктами</li>
+                <li>И даже с тремя отдельними пунктами</li>
+            </ul>
+        </section>
     </main>
     <footer>
         <h2>Отличное начало! H2</h2>
